[Feature] Added tests